--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
+/.gitignore
 /chaincode/node_modules
 /network/bin
 /network/crypto-config
-/network/channel/artifacts
+/chaincode/package-lock.json
